--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -104,7 +104,7 @@ DockId=0x0000000D,0
 
 [Window][HumanoidBody]
 Pos=1257,59
-Size=580,374
+Size=580,375
 Collapsed=0
 DockId=0x0000000E,2
 
@@ -115,15 +115,20 @@ Collapsed=0
 
 [Window][Lighting]
 Pos=1257,59
-Size=580,374
+Size=580,375
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Skydome]
 Pos=1257,59
-Size=580,374
+Size=580,375
 Collapsed=0
 DockId=0x0000000E,1
+
+[Window][Player Alpha]
+Pos=60,60
+Size=618,183
+Collapsed=0
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
@@ -139,5 +144,5 @@ DockNode    ID=0x0000000A Pos=158,63 Size=724,197 Split=X Selected=0x73CB1CFE
   DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=182,153 Selected=0x704CD24F
   DockNode  ID=0x0000000D Parent=0x0000000A SizeRef=180,153 Selected=0x73CB1CFE
 DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
-DockNode    ID=0x0000000E Pos=1257,59 Size=580,374 Selected=0x9B1E76BE
+DockNode    ID=0x0000000E Pos=1257,59 Size=580,375 Selected=0x9B1E76BE
 
