別視点でオブジェクトをうつせるようにした

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Application\SourceCode\Scene\TestScene.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\TitleScene.cpp" />
     <ClCompile Include="Application\SourceCode\MessageSign.cpp" />
+    <ClCompile Include="Application\SourceCode\ShadowMap.cpp" />
     <ClCompile Include="Application\SourceCode\Skydome.cpp" />
     <ClCompile Include="Application\SourceCode\Sword.cpp" />
     <ClCompile Include="Application\SourceCode\TargetCamera.cpp" />
@@ -287,6 +288,7 @@
     <ClInclude Include="Application\SourceCode\Scene\TestScene.h" />
     <ClInclude Include="Application\SourceCode\Scene\TitleScene.h" />
     <ClInclude Include="Application\SourceCode\MessageSign.h" />
+    <ClInclude Include="Application\SourceCode\ShadowMap.h" />
     <ClInclude Include="Application\SourceCode\Skydome.h" />
     <ClInclude Include="Application\SourceCode\Sword.h" />
     <ClInclude Include="Application\SourceCode\TargetCamera.h" />
