--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -4,14 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Lighting]
-Pos=1356,103
+Pos=1293,802
 Size=515,185
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Skydome]
-Pos=1135,81
-Size=670,62
+Pos=1293,802
+Size=515,185
 Collapsed=0
+DockId=0x00000001,1
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=1293,802 Size=515,185 Selected=0x9BB92E70
 
