--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -4,17 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Lighting]
-Pos=1755,43
-Size=121,55
+Pos=1221,36
+Size=561,201
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Skydome]
-Pos=1755,43
-Size=121,55
+Pos=1221,36
+Size=561,201
 Collapsed=0
 DockId=0x00000001,1
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=1755,43 Size=121,55 Selected=0x9BB92E70
+DockNode  ID=0x00000001 Pos=1221,36 Size=561,201 Selected=0x36FF2379
 
