やっぱ分からないーーーーー

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -16,5 +16,5 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=1339,32 Size=561,199 Selected=0x36FF2379
+DockNode  ID=0x00000001 Pos=1339,32 Size=561,199 Selected=0x9BB92E70
 
