--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -1108,6 +1108,9 @@
     <None Include="Application\Shader\ShadowObj.hlsli">
       <Filter>Shader\Application\ShaderMap</Filter>
     </None>
+    <None Include="Application\Shader\ShadowMap.hlsli">
+      <Filter>Shader\Application\ShaderMap</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="NewEngine\Shader\CircleGaugeSpritePS.hlsl">
@@ -1258,6 +1261,12 @@
       <Filter>Shader\Application\ShaderMap</Filter>
     </FxCompile>
     <FxCompile Include="Application\Shader\ShadowObjPS.hlsl">
+      <Filter>Shader\Application\ShaderMap</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\ShadowMapVS.hlsl">
+      <Filter>Shader\Application\ShaderMap</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\ShadowMapPS.hlsl">
       <Filter>Shader\Application\ShaderMap</Filter>
     </FxCompile>
   </ItemGroup>
