--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -238,6 +238,24 @@
     <Filter Include="Shader\Application\ShaderMap">
       <UniqueIdentifier>{07f3a72f-efb1-48ef-b187-562e4f30b081}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader\Application\RespawnPoint\Transition">
+      <UniqueIdentifier>{c72fd087-92e7-4d7d-afbd-8fe369dd9ef9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader\Application\GaussianBlur">
+      <UniqueIdentifier>{e48727b2-0d2f-400e-897c-ffcc0bb9f24a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Source\ShadowMap">
+      <UniqueIdentifier>{87c7ff0d-2214-4104-9e56-a045ef8fbf69}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Header\ShadowMap">
+      <UniqueIdentifier>{b27e1439-b356-4ea8-b083-b6b62298c3a9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Source\Transition">
+      <UniqueIdentifier>{b15e3992-8aa7-46c4-9061-10e06be98a9a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Header\Transition">
+      <UniqueIdentifier>{13c79bd5-823b-4e31-abad-6427f96d41b3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -597,9 +615,6 @@
     <ClCompile Include="Application\SourceCode\ResultUI.cpp">
       <Filter>Application\Source\UI</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\ShadowMap.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="Application\SourceCode\RespawnPoint.cpp">
       <Filter>Application\Source\Field</Filter>
     </ClCompile>
@@ -609,11 +624,17 @@
     <ClCompile Include="Application\SourceCode\RespawnPointUI.cpp">
       <Filter>Application\Source\UI</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\ShadowObj.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Util\Rect.cpp">
       <Filter>NewEngine\Source\Util</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\ShadowMap.cpp">
+      <Filter>Application\Source\ShadowMap</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\ShadowObj.cpp">
+      <Filter>Application\Source\ShadowMap</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\RespawnTransition.cpp">
+      <Filter>Application\Source\Transition</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1010,9 +1031,6 @@
     <ClInclude Include="Application\SourceCode\ResultUI.h">
       <Filter>Application\Header\UI</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\ShadowMap.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="Application\SourceCode\RespawnPoint.h">
       <Filter>Application\Header\Field</Filter>
     </ClInclude>
@@ -1022,11 +1040,17 @@
     <ClInclude Include="Application\SourceCode\RespawnPointUI.h">
       <Filter>Application\Header\UI</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\ShadowObj.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Util\Rect.h">
       <Filter>NewEngine\Header\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\ShadowMap.h">
+      <Filter>Application\Header\ShadowMap</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\ShadowObj.h">
+      <Filter>Application\Header\ShadowMap</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\RespawnTransition.h">
+      <Filter>Application\Header\Transition</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1075,9 +1099,6 @@
     <None Include="Application\Shader\Vignette.hlsli">
       <Filter>Shader\Application</Filter>
     </None>
-    <None Include="Application\Shader\GaussianBlur.hlsli">
-      <Filter>Shader\Application</Filter>
-    </None>
     <None Include="Application\Shader\HighLumi.hlsli">
       <Filter>Shader\Application</Filter>
     </None>
@@ -1110,6 +1131,12 @@
     </None>
     <None Include="Application\Shader\ShadowMap.hlsli">
       <Filter>Shader\Application\ShaderMap</Filter>
+    </None>
+    <None Include="Application\Shader\RespawnTransition.hlsli">
+      <Filter>Shader\Application\RespawnPoint\Transition</Filter>
+    </None>
+    <None Include="Application\Shader\GaussianBlur.hlsli">
+      <Filter>Shader\Application\GaussianBlur</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -1183,12 +1210,6 @@
       <Filter>Shader\Application</Filter>
     </FxCompile>
     <FxCompile Include="Application\Shader\VignetteVS.hlsl">
-      <Filter>Shader\Application</Filter>
-    </FxCompile>
-    <FxCompile Include="Application\Shader\GaussianBlurPS.hlsl">
-      <Filter>Shader\Application</Filter>
-    </FxCompile>
-    <FxCompile Include="Application\Shader\GaussianBlurVS.hlsl">
       <Filter>Shader\Application</Filter>
     </FxCompile>
     <FxCompile Include="Application\Shader\HighLumiPS.hlsl">
@@ -1268,6 +1289,18 @@
     </FxCompile>
     <FxCompile Include="Application\Shader\ShadowMapPS.hlsl">
       <Filter>Shader\Application\ShaderMap</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\RespawnTransitionPS.hlsl">
+      <Filter>Shader\Application\RespawnPoint\Transition</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\RespawnTransitionVS.hlsl">
+      <Filter>Shader\Application\RespawnPoint\Transition</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\GaussianBlurPS.hlsl">
+      <Filter>Shader\Application\GaussianBlur</Filter>
+    </FxCompile>
+    <FxCompile Include="Application\Shader\GaussianBlurVS.hlsl">
+      <Filter>Shader\Application\GaussianBlur</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
